--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
     integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>#TITLE</title>
+  <title>Vituity UI</title>
 </head>
 
 <body>
